# APImigrationTool

./: .env.template  .gitattributes  .gitignore  BUG_FIX_SUMMARY.md  CATALOG_COLLECTION_SUPPORT.md  CATALOG_TO_PORTAL_MIGRATION.md  COMPLETE_GUIDE.md  CONVERSION_ARCHITECTURE.md  CREATE_CLEAN_INDEX.md  DEMO_README.md  DEPENDENCY_FIX.md  DEPLOYMENT_ARCHITECTURE.md  DETAILED_CONVERSION_LOGIC.md  DEVELOPER_GUIDE.md  KUBERNETES_DEPLOYMENT_GUIDE.md  MIGRATION_SCOPE.md  MOCK_VS_REAL_DATA.md  QUICKSTART.md  README.md  REAL_CONNECTIONS_GUIDE.md  STARTUP_GUIDE.md  TESTING_GUIDE.md  TRUST_VALIDATION_GUIDE.md  UI_CATALOG_COLLECTION_GUIDE.md  USAGE_GUIDE.md  WEB_DASHBOARD_GUIDE.md  bulk_generate_configs.py  catalog-mapping-sample.yaml  check_syntax.py  config.example.yaml  config.schema.yaml  demo.py  migrate_catalog_to_portal.py  pyproject.toml  requirements.txt  run_demo.bat  run_demo.sh  start.bat  start.sh  start_web.bat  (+4 more)
demo-portal-configs/: README.md  customer-apis-product.yaml  deploy.sh  production-portal-portal.yaml
docs/: architecture.md  cli-reference.md  configuration.md  ownership.md  troubleshooting.md
migrations/: 001_initial_schema.sql
src/: __init__.py
src/audit/: __init__.py  logger.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  filter_engine.py  loader.py
src/connectors/: __init__.py  apic_connector.py  base.py  mock_data.py  swagger_connector.py
src/discovery/: __init__.py  batch_processor.py
src/inventory/: __init__.py  risk_scorer.py
src/ownership/: __init__.py  manager.py
src/state/: __init__.py  lock_manager.py  (+1 more)
(+6 files in other folders)
